<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="menu_search">Rechercher</string>
    <string name="menu_settings">Paramètres</string>
    <string name="play_icon">Lire la musique</string>
    <string name="playlist_icon">Voir la playlist</string>
    <string name="options_icon_music">Options de la musique</string>
    <string name="options_icon_playlist">Options de la playlist</string>
    <string name="default_title">Titre de la musique</string>
    <string name="form_year">Année</string>
    <string name="form_music_number">Numéro de piste</string>
    <string name="form_save_button">Enregistrer</string>
    <string name="default_artist">Artiste</string>
    <string name="default_album">Album</string>
    <string name="music_title">Titre de la musique</string>
    <string name="playlist_title">Titre de la playlist</string>
    <string name="playlist_number_of_musics">0 musique</string>
    <string name="music_artist">Artiste</string>
    <string name="menu_artists">Artistes</string>
    <string name="menu_musics">Musiques</string>
    <string name="menu_albums">Albums</string>
    <string name="menu_playlists">Playlists</string>
    <string name="description_artist_cart">image artist</string>
    <string name="musics_number">" musiques"</string>
    <string name="favoris_playlist">Favoris</string>
    <string name="recently_added_playlist">Ajoutées récemment</string>
    <string name="select_folder">Choisir un dossier</string>
    <string name="select_folder_desc">Sélectionnez le dossier où vos musiques sont stockées.\n\nVous ne pourrez écouter que les fichiers contenus dans ce dossier.</string>
    <string name="no_music_found">Aucune musique trouvée</string>
    <string name="play">Lecture</string>
    <string name="play_next">Lire juste après</string>
    <string name="artist">Artiste</string>
    <string name="add_to_playlist">Ajouter à la playlist</string>
    <string name="edit_tags">Éditer les tags</string>
    <string name="delete">Supprimer</string>
    <string name="remove_to_playlist">Retirer de la playlist</string>
    <string name="add_to_favoris">Ajouter aux favoris</string>
    <string name="remove_from_favoris">Retirer des favoris</string>
    <string name="updated_data">Musique modifiée</string>
    <string name="updated_album_data">Album modifié</string>
    <string name="updated_artist_data">Artiste modifié</string>
    <string name="playlist_number_of_musics_count">Nombre de musiques : %d</string>
    <string name="other_default_title">Titre</string>
    <string name="music_missing_data">Les champs \"titre\" et \"artistes\" ne doivent pas être vide.</string>
    <string name="create_playlist_text">Créer une playlist</string>
    <string name="added_to_playlist">Ajouté à %1$s</string>
    <string name="Playlist_edit_menu">Éditer</string>
    <string name="Playlist_delete_menu">Supprimer</string>
    <string name="title_rename_playlist">Renommer</string>
    <string name="edit_rename_playlist">Nouveau nom</string>
    <string name="validate_btn_rename_playlist">Valider</string>
    <string name="search_bar_text">Rechercher</string>
    <string name="position_queue">0/0</string>
    <string name="music_time">00:00</string>
    <string name="channel_description">Affiche la musique en cours et les contrôles</string>
    <string name="channel_name">Contrôle de lecture</string>
</resources>