<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp">

    <ImageView
        android:id="@+id/icon_play"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/playlist_icon"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_playlist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_separation"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        style="@style/SubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/playlist_title"
        app:layout_constraintBottom_toBottomOf="@+id/view_separation"
        app:layout_constraintStart_toEndOf="@+id/icon_play" />

    <TextView
        android:id="@+id/number_musics"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlist_number_of_musics"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/view_separation" />

    <ImageView
        android:id="@+id/icon_more"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/options_icon_playlist"
        android:src="@drawable/ic_menu_dots_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/icon_play"
        app:layout_constraintEnd_toEndOf="@+id/view_separation"
        app:layout_constraintTop_toTopOf="@+id/icon_play" />

</androidx.constraintlayout.widget.ConstraintLayout>
