<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/artist_form_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center_horizontal"
    android:orientation="vertical"
    android:padding="24dp">

    <ImageView
        android:id="@+id/edit_photo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/image_border"
        android:scaleType="centerCrop" />

    <EditText
        android:id="@+id/edit_artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/artist"
        android:inputType="textCapWords" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/yellow"
            android:text="@string/delete" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/form_save_button" />
    </LinearLayout>
</LinearLayout>
